--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+ 
+
+<!DOCTYPE html>
+<html>
+ 
+<head>
+
+  <style>
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #FFCC00;
+    }
+  </style>
+</head>
+ 
+<body>
  <img src="final.jpg" alt="Italian Trulli">
+</body>
+ 
+</html>
