--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </head>
  
 <body>
+  <style>
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #FFCC00;
+    }
+  </style>
  <img src="final.jpg" alt="Italian Trulli">
 </body>
  
