--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 </head>
  
 <body>
-  <style>
+ <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
     body {
         height: 100%;
         margin: 0;
@@ -24,7 +30,7 @@
         background-color: #FFCC00;
     }
   </style>
- <img src="final.jpg" alt="Italian Trulli">
+ <img src="final.jpg" alt="Italian Trulli" class="center">
 </body>
  
 </html>
