--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
         height: 100%;
         margin: 0;
-        padding: 50;
+        padding: 50%;
         background-color: #FFCC00;
     }
   </style>
