--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img {
         background-color: #FFCC00;
     }
   </style>
- <img src="final.jpg" alt="Italian Trulli" class="center">
+ <img src="final.jpg" alt="Italian Trulli" class="center" style="width:50%">
 </body>
  
 </html>
