--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
- 
-
-<!DOCTYPE html>
-<html>
- 
-<head>
-
-  <style>
-    body {
-        height: 100%;
-        margin: 0;
-        padding: 50%;
-        background-color: #FFCC00;
-    }
-  </style>
-</head>
- 
-<body>
- <style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+<div class="verticalhorizontal">
+    <img src="final.jpg" alt="centered image" />
+</div>
+<style>
+.verticalhorizontal {
+    display: table-cell;
+    height: 300px;
+    text-align: center;
+    width: 300px;
+    vertical-align: middle;
 }
-
-    body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        background-color: #FFCC00;
-    }
-  </style>
- <img src="final.jpg" alt="Italian Trulli" class="center" style="width:50%">
-</body>
- 
-</html>
+</style>
