--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<div class="verticalhorizontal">
+<center>
     <img src="final.jpg" alt="centered image" />
-</div>
-<style>
-.verticalhorizontal {
-    display: table-cell;
-    height: 300px;
-    text-align: center;
-    width: 300px;
-    vertical-align: middle;
-}
-</style>
+</center>
