--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<center>
-    <img src="final.jpg" alt="centered image" />
-</center>
+<div>
+    <img class="marginauto" src="final.jpg" alt="centered image" />
+</div>
+<style>
+.marginauto {
+    margin: 10px auto 20px;
+    display: block;
+}
+</style>
