--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<div>
-    <img class="marginauto" src="final.jpg" alt="centered image" />
-</div>
-<style>
-.marginauto {
-    margin: 10px auto 20px;
-    display: block;
-}
-</style>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <style>
+      .img-container {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="img-container"> <!-- Block parent element -->
+      <img src="final.jpg" alt="">
+    </div>
+  </body>
+</html>
