--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <style>
-      .img-container {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="img-container"> <!-- Block parent element -->
-      <img src="final.jpg" alt="">
-    </div>
-  </body>
-</html>
+<div><img src="final.jpg"></div>
+<style>
+  
+  html, body
+{
+    height: 100%;
+    margin:0;
+    padding:0;
+}
+
+div {
+    position:relative;
+    height: 100%;
+    width:100%;
+}
+
+div img {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+}
+  </style>
